--- a/style.css
+++ b/style.css
@@ -196,3 +196,14 @@ a:visited {
   color: #a8a29e;
   text-decoration: none;
 }
+
+/* State classes */
+
+.hidden {
+  /* opacity: 0;
+  pointer-events: none;
+  width:0;
+  height:0;
+   */
+  display: none !important;
+}
