--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,7 @@ body {
   margin: 3.2rem auto;
 }
 .header,
-.fact-form,
-.main {
+.fact-form {
   margin-bottom: 3.2rem;
 }
 h1 {
@@ -111,6 +110,7 @@ h1 {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 3rem;
+  height: calc(100vh - 73.6px - 51.2px - 51.2px);
 }
 
 li:not(:last-child) {
@@ -216,4 +216,22 @@ a:visited {
   height:0;
    */
   display: none !important;
+}
+
+.message {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: 600;
+  margin-top: 24px;
+}
+
+.vote-buttons button:disabled {
+  background-color: #44403c;
+}
+
+.disputed {
+  color: #ef4444;
+  font-weight: 600;
+  margin-right: 10px;
 }
