--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,10 @@
 *:focus {
   outline-color: #a8a29e;
 }
+
+html {
+  font-size: calc(1vw + 3px);
+}
 body {
   font-family: "Sono", sans-serif;
   background-color: #292524;
@@ -14,13 +18,13 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  width: 87vw;
   margin: 3.2rem auto;
 
   /* margin: auto; */
 }
 #root {
-  max-width: 1200px;
+  max-width: 87vw;
   margin: 3.2rem auto;
 }
 .header,
@@ -108,7 +112,7 @@ h1 {
 .main {
   color: #fff;
   display: grid;
-  grid-template-columns: 250px 1fr;
+  grid-template-columns: minmax(17rem, 1fr) minmax(20rem, 5fr);
   gap: 3rem;
   height: calc(100vh - 73.6px - 51.2px - 51.2px);
 }
@@ -151,9 +155,11 @@ ul {
   color: inherit;
   cursor: pointer;
   font-family: inherit;
-  font-size: 18px;
+  /* font-size: 18px; */
+  /* font-size: calc(1vw + 3px); */
   font-weight: 600;
-  padding: 6px 12px;
+  /* padding: 6px 12px; */
+  padding: 0.59vw 1.17vw; /*responsive padding */
   transition: 0.3s;
 }
 
@@ -163,6 +169,7 @@ ul {
   border-radius: 100px;
   text-transform: uppercase;
   font-family: "Coiny", sans-serif;
+  flex-shrink: 1;
 }
 
 .fact-form {
